--- a/src/styles/media-main-page-cards-goods.less
+++ b/src/styles/media-main-page-cards-goods.less
@@ -379,9 +379,106 @@
                         }
                         .ppp2 {
                             width: 100%;
-                            height: 200px;
-                            background: rgb(61, 167, 167);
+                            min-height: 1px;
+                            background: rgb(247, 248, 248);
                             margin-top: 20px;
+                            
+                            .ppp2-w {
+                                margin: 0;
+                                padding: 0;
+                                // min-height: 1px;
+                                .eee {
+                                    .content1-description {
+                                        padding: 0;
+                                        margin: 0;
+                                        display: flex;
+                                        flex-direction: column;
+                                        min-height: 1px;
+                                        width: 100%;
+                                        max-width: 1260px;
+                                        align-items: center;
+                                        justify-content: center;
+                                       
+                                        .content1-block-linear {
+                                            height: 3px;
+                                            width: 90%;
+                                            background: @color_linear_main;
+                                            margin: 0px 0px 20px 0px;
+                                        }
+                                        .content1-description-title {
+                                            color: @color_black_main;
+                                            text-transform: uppercase;
+                                            font-size: @font-size_main + 0px;
+                                            font-family: 'Montserrat', sans-serif;
+                                            font-weight: 500;
+                                            letter-spacing: 0px;
+                                            word-spacing: 5px;
+                                            text-align: center;
+                                            padding-top: 0px;
+                                            border-bottom: 2px solid @color_blue_main;
+                                            position: relative;
+                                        }
+                                        .content1-description-title:before {
+                                            content: "";
+                                            width: 50%;
+                                            height: 100%;
+                                            border-bottom: 2px solid @color_yellow_main;
+                                            position: absolute;
+                                            left: 0;
+                                        }
+                                       
+                                    }
+                                }
+                                ul {
+                                    margin: 0;
+                                    padding: 5px 0px;
+                                    // display: flex;
+                                   
+                                    
+                                    max-width: 1260px;
+    
+    
+                                    display: flex;
+                                    justify-content: space-between;
+                                    align-items: center;
+                                    border-bottom: 1px solid gray;
+                                    
+                                    .iii {
+                                        padding: 0;
+                                        margin: 0;
+                                        padding-left: 10px;
+                                        padding-right: 10px;
+                                        // min-width: 1px;
+                                        width: 100%;
+                                        // height: 35px;
+                                        // height: 100%;
+                                        min-height: 25px;
+                                        line-height: 25px;
+                                        
+                                        // margin-bottom: 15px;
+                                        
+                                        
+                                        
+    
+                                        list-style: none;
+                                        .text {
+                                            font-family: 'Roboto', sans-serif;
+                                            font-weight: 400;
+                                            font-size: @font-size_main - 3px;
+                                            letter-spacing: 0px;
+                                            word-spacing: 3px;
+                                            color: @color_black_main;
+                                            text-transform: uppercase;
+                                            text-decoration: none;
+                                           
+                                            // position: relative;
+                                            // top: 50%;
+                                            // transform: translateY(-50%);
+    
+                                        }
+                                    }
+                                }
+                            }
     
                         }
                         .ppp3{
